--- a/site/styles/pages/dropdown.scss
+++ b/site/styles/pages/dropdown.scss
@@ -1,6 +1,7 @@
 .dropdown-trigger-box {
-  &>div {
+  & > div {
     margin-right: 20px;
+    margin-bottom: 20px;
     display: inline-block;
   }
 }
@@ -13,6 +14,12 @@
 
   li {
     padding: 10px;
-    min-width: 200px;
+    min-width: 150px;
+  }
+}
+
+.modal-inner-btn {
+  & > div {
+    display: inline-block;
   }
 }
