--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -177,10 +177,10 @@
 
   // Menu
   --menu-default-bg-color: var(--color-text-inverse);
-  --menu-dark-bg-color: #001529;
+  --menu-dark-bg-color: #363642;
   --menu-collapsed-width: 56px;
   --submenu-light-bg-color: #fff;
-  --submenu-dark-bg-color: #000c17;
+  --submenu-collapsed-padding-vertical: 4px;
   --submenu-min-width: 150px;
   --menuitem-dark-color: hsla(0, 0%, 100%, 0.65);
   --menuitem-dark-active-color: var(--color-text-inverse);
