--- a/components/radio/style/component.scss
+++ b/components/radio/style/component.scss
@@ -108,10 +108,10 @@
     @include m(sm) {
       @include b(radio) {
         @include button-size(
-          var(--button-height-xs),
-          var(--button-padding-h-xs),
-          var(--button-font-size-xs),
-          var(--button-icon-size-xs),
+          var(--button-height-sm),
+          var(--button-padding-h-sm),
+          var(--button-font-size-sm),
+          var(--button-icon-size-sm),
         );
       }
     }
