perf: optimize height transition of textarea

--- a/components/input/style/index.scss
+++ b/components/input/style/index.scss
@@ -24,7 +24,7 @@
     border: var(--input-default-border);
     line-height: 1.5;
     outline: none;
-    transition: all .3s;
+    transition: all 0.3s, height 0s;
 
     &:hover {
       border-color: var(--theme-primary);
@@ -370,7 +370,7 @@
       min-height: var(--input-height-md);
       line-height: 1.5;
       vertical-align: bottom;
-      transition: all 0.3s, height 0;
+      transition: all 0.3s, height 0s;
       font-size: var(--input-font-size-md);
     }
 
