--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -309,7 +309,7 @@
   // Input
   --input-focus-shadow: 0 0 0 2px rgba(0, 188, 113, 0.2);
   --input-default-border: 1px solid var(--input-default-border-color);
-  --input-default-border-color: #e6e6e6;
+  --input-default-border-color: #dcdcdc;
   --input-default-color: #343434;
   --input-height-lg: 40px;
   --input-height-md: 32px;
