--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -4,7 +4,7 @@
   z-index: 1100;
   position: relative;
 
-  @include e(cell-box) {
+  @include e(cell) {
     padding: 24px 24px 0;
     width: 100%;
     height: 100%;
