--- a/components/menu/style/index.scss
+++ b/components/menu/style/index.scss
@@ -174,6 +174,7 @@
     @include e(submenu) {
       @include e(title) {
         position: relative;
+
         &:hover {
           @include e(arrow) {
             @include arrow-active();
@@ -190,6 +191,7 @@
           &:before {
             transform: rotate(40deg) translateX(2px);
           }
+
           &:after {
             transform: rotate(-40deg) translateX(-2px);
           }
@@ -235,6 +237,7 @@
       > a {
         color: var(--menuitem-default-color);
       }
+
       &:hover {
         border-bottom: 2px solid var(--menuitem-active-color);
         background: var(--menu-default-bg-color);
@@ -272,6 +275,7 @@
       position: relative;
       @include e(title) {
         position: relative;
+
         &:hover {
           @include e(arrow) {
             @include arrow-active();
@@ -295,8 +299,9 @@
     @include b(icon) {
       color: var(--color-text-caption);
     }
+
     @include e(sub) {
-      background: var(--menu-dark-bg-color);;
+      background: var(--menu-dark-bg-color);
     }
 
     @include e(item) {
