--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -71,7 +71,7 @@
 
   // Avatar
   --avatar-border-radius: 50%;
-  --avatar-fontSize: 14px;
+  --avatar-font-size: 14px;
   --avatar-width-md: 40px;
   --avatar-height-md: 40px;
   --avatar-width-xl: 72px;
