feat: support checkedText and unCheckText for Switch

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -227,6 +227,8 @@
   --switch-width-sm: 32px;
   --switch-height-md: 20px;
   --switch-height-sm: 16px;
+  --switch-font-size-md: var(--font-size-sm);
+  --switch-font-size-sm: var(--font-size-xs);
   --switch-background: #bcbcbc;
 
   // Tabs
