--- a/components/switch/style/mixins.scss
+++ b/components/switch/style/mixins.scss
@@ -1,5 +1,5 @@
-@mixin switch-size($width, $height, $radix) {
-  width: $width;
+@mixin switch-size($width, $height, $font-size, $radix) {
+  min-width: $width;
   height: $height;
 
   &:after {
@@ -11,6 +11,17 @@
 
   &:not(&--disabled):active::after {
     width: calc((#{$height} - #{$radix} * 2px) * 1.33);
+  }
+
+  @include e(text) {
+    line-height: $height;
+    margin-left: calc(#{$height} * 1.33 - #{$radix} * 2px);
+    margin-right: calc(#{$radix} * 3px);
+    font-size: $font-size;
+
+    @include b(icon) {
+      font-size: $font-size;
+    }
   }
 
   @include b(activity-indicator) {
@@ -25,6 +36,11 @@
       left: 100%;
       transform: translateX(-100%);
       margin-left: - #{$radix}px;
+    }
+
+    @include e(text) {
+      margin-left: calc(#{$radix} * 3px);
+      margin-right: calc(#{$height} * 1.33 - #{$radix} * 2px);
     }
 
     @include b(activity-indicator) {
