--- a/components/drawer/style/component.scss
+++ b/components/drawer/style/component.scss
@@ -2,56 +2,56 @@
 
 @include b(drawer) {
   position: relative;
-  padding: 24px 24px 0;
+  padding: 24px;
   width: 100%;
   height: 100%;
   background-color: #fff;
 
   @include e(container) {
     transition: all 300ms ease-in-out;
-
-    @include m(title) {
-      width: 100%;
-      position: relative;
-      padding: 16px 24px;
-      background: #fff;
-      border-bottom: 1px solid #e8e8e8;
-      border-radius: 4px 4px 0 0;
-      font-size: 22px;
-      color: rgba(52, 52, 52, 1);
-      line-height: 30px;
-      font-weight: 500;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    @include m(body) {
-      font-size: 14px;
-      line-height: 1.5;
-      word-wrap: break-word;
-    }
   }
 
-  @include e(closebtn) {
+  @include e(title) {
+    width: 100%;
+    position: relative;
+    padding: 16px 24px;
+    background: #fff;
+    border-bottom: 1px solid #e8e8e8;
+    border-radius: 4px 4px 0 0;
+    font-size: 22px;
+    color: rgba(52, 52, 52, 1);
+    line-height: 30px;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  @include e(body) {
+    font-size: 14px;
+    line-height: 1.5;
+    word-wrap: break-word;
+  }
+
+  @include e(close) {
+    position: absolute;
+    left: -33px;
+    top: 0;
     width: 33px;
     height: 52px;
-    position: absolute;
-    background-image: url('../../components//drawer/style/tab-first@2x.png');
+    padding: 0;
+    background-image: url('../../components/drawer/style/tab-first@2x.png');
     background-size: 33px 52px;
     background-color: transparent;
     cursor: pointer;
     border: none;
     color: #bcbcbc;
     transition: all 300ms ease-in-out;
-    left: -33px;
-    top: 0;
-    padding: 0;
 
     i {
       position: absolute;
       top: 18px;
-      left: 14px;
+      left: 13px;
     }
 
     &:hover {
