perf: set vertical-align is middle of button

--- a/components/button/style/index.scss
+++ b/components/button/style/index.scss
@@ -4,6 +4,8 @@
 
 @include b(button) {
   display: inline-block;
+  vertical-align: middle;
+
   @include button-base();
   @include button-size(
     var(--button-height-md),
