--- a/site/styles/pages/badge.scss
+++ b/site/styles/pages/badge.scss
@@ -3,6 +3,13 @@
     margin-right: 48px;
   }
 
+  .badge-themes {
+    .zw-badge {
+      margin-right: 48px;
+      margin-bottom: 24px;
+    }
+  }
+
   .box-item {
     display: inline-block;
     width: 42px;
