--- a/site/styles/pages/loading.scss
+++ b/site/styles/pages/loading.scss
@@ -1,8 +1,4 @@
 .loading-page {
-  .source {
-    padding: 42px 24px;
-  }
-
   .zw-loading + .zw-loading {
     margin-left: 16px;
   }
@@ -10,7 +6,7 @@
   .loading-container {
     background: rgba(0, 0, 0, 0.05);
     border-radius: 4px;
-    padding: 30px 50px;
+    padding: 15px;
     color: #000;
   }
 
