--- a/site/components/Markdown/style.scss
+++ b/site/components/Markdown/style.scss
@@ -130,11 +130,10 @@
 
   .source {
     position: relative;
-    padding: 32px 24px;
+    margin: 32px 24px;
     // border-top: 1px solid #eaeefb;
 
     .rows {
-      overflow: hidden;
       margin-bottom: 16px;
 
       &:last-of-type {
