--- a/components/message/style/mixins.scss
+++ b/components/message/style/mixins.scss
@@ -13,6 +13,9 @@
       opacity: 1;
       max-height: 100px;
     }
+    50% {
+      opacity: 0;
+    }
     100% {
       opacity: 0;
       padding-top: 0;
