--- a/components/message/style/mixins.scss
+++ b/components/message/style/mixins.scss
@@ -4,6 +4,7 @@
       opacity: 0;
       transform: translate3d(-50%, $x, 0);
     }
+
     100% {
       opacity: 1;
     }
@@ -13,9 +14,11 @@
       opacity: 1;
       max-height: 100px;
     }
+
     50% {
       opacity: 0;
     }
+
     100% {
       opacity: 0;
       padding-top: 0;
@@ -24,7 +27,7 @@
       margin-bottom: 0;
       max-height: 0;
       min-height: 0;
-      top:  $top
+      top: $top;
     }
   }
 }
@@ -33,6 +36,7 @@
   &.message--#{$position}-in {
     animation-name: message-#{$position}-in;
   }
+
   &.message--#{$position}-out {
     animation-name: message-#{$position}-out;
   }
