--- a/components/notification/style/index.scss
+++ b/components/notification/style/index.scss
@@ -50,7 +50,7 @@
   padding: 16px 20px;
   border-radius: var(--radius-md);
   background-color: var(--color-text-inverse);
-  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
   z-index: var(--zindex-notification);
   margin-bottom: 20px;
   overflow: hidden;
@@ -66,6 +66,7 @@
     top: 11px;
     right: 16px;
     color: #909090;
+
     &:hover {
       color: #000;
     }
@@ -105,6 +106,7 @@
     @include e(foot) {
       padding: var(--notification-footer-padding);
       text-align: right;
+
       button + button {
         margin-left: 8px;
       }
