fix: add dropdown css variable

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -327,4 +327,7 @@
   --input-addon-background-color: #f2f2f2;
   --input-addon-border-color: #d9d9d9;
   --input-placeholder-color: #bcbcbc;
+
+  // dropdown
+  --dropdown-popup-index: 1101;
 }
